--- a/Example Web Scraping with Python.ipynb
+++ b/Example Web Scraping with Python.ipynb
@@ -11,6 +11,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### SPECIAL OFFER"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "http://programwithus.online/specialdeal/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Web site for scraping"
    ]
   },
