--- a/pandas_mat_MonteCarlo.ipynb
+++ b/pandas_mat_MonteCarlo.ipynb
@@ -4,7 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Monte Carlo simulation"
+    "# Monte Carlo simulation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SPECIAL OFFER"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "http://programwithus.online/specialdeal/"
    ]
   },
   {
