Ask Art Questions

--- a/pandas_mat_MonteCarlo.ipynb
+++ b/pandas_mat_MonteCarlo.ipynb
@@ -11,14 +11,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SPECIAL OFFER"
+    "### Ask Art Questions"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://programwithus.online/specialdeal/"
+    "https://www.instagram.com/artyudin_nyc/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://twitter.com/artyudin_nyc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "More Deatails"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://programwithus.com/classes/python-for-data-science-immersive-nyc"
    ]
   },
   {
@@ -597,7 +618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
