--- a/IndeedAutomateExample.ipynb
+++ b/IndeedAutomateExample.ipynb
@@ -11,14 +11,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SPECIAL OFFER"
+    "```\n",
+    "Ask Art Questions:\n",
+    "```\n",
+    "https://www.instagram.com/artyudin_nyc/\n",
+    "\n",
+    "https://twitter.com/artyudin_nyc\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://programwithus.online/specialdeal/"
+    "More details"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://programwithus.com/classes/python-for-data-science-immersive-nyc"
    ]
   },
   {
@@ -38,7 +50,7 @@
    "outputs": [],
    "source": [
     "position = \"Python\"\n",
-    "city = \"New York\""
+    "city = \"New+York\""
    ]
   },
   {
@@ -188,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
