--- a/ExampleCSVStatistics.ipynb
+++ b/ExampleCSVStatistics.ipynb
@@ -11,14 +11,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Special Offer"
+    "# Ask Art Questions"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://programwithus.online/specialdeal/"
+    "https://www.instagram.com/artyudin_nyc/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://twitter.com/artyudin_nyc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "More details"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://programwithus.com/topics/python-courses-nyc"
    ]
   },
   {
@@ -404,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
